UPD: German language file from Vacon
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@1899 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.4.5/language/doublecmd.de.po
+++ b/branches/0.4.5/language/doublecmd.de.po
@@ -1386,7 +1386,7 @@ msgstr "Kopiere Dateinamen in die Zwischenablage"
 
 #: TFRMMAIN.ACTCOPYNOASK.CAPTION
 msgid "Copy files without asking for confirmation"
-msgstr ""
+msgstr "Kopiere Datei(en) ohne Bestätigung einzufordern"
 
 #: TFRMMAIN.ACTCOPYSAMEPANEL.CAPTION
 msgid "Copy to same panel"
@@ -1591,7 +1591,7 @@ msgstr "Verschieben F6"
 
 #: TFRMMAIN.ACTRENAMENOASK.CAPTION
 msgid "Move/Rename files without asking for confirmation"
-msgstr ""
+msgstr "Verschiebe / Benenne Datei(en) um ohne Bestätigung einzufordern"
 
 #: TFRMMAIN.ACTRENAMEONLY.CAPTION
 msgctxt "TFRMMAIN.ACTRENAMEONLY.CAPTION"
